2013-06-24  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-internal): Fix bug#14620.

2013-06-23  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (face-documentation): Simplify.
	(read-face-attribute, tty-find-type, x-resolve-font-name):
	Use `string-match-p'.
	(list-faces-display): Use `string-match-p'.  Simplify.
	(face-spec-recalc): Check face to avoid face alias loops.
	(read-color): Use `string-match-p' and non-capturing parenthesis.

2013-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-rescale-image): Use the new
	:max-width/:max-height functionality.

2013-06-23  Ivan Kanis  <ivan@kanis.fr>

	* net/eww.el (eww-search-prefix): New variable.
	(eww): Use it.
	(eww-external-browser): New variable.
	(eww-mode-map): New keystroke.
	(eww-browse-with-external-browser): New command.

	* net/eww.el: Bind `C-c C-c' to "submit" in all form keymaps.

2013-06-23  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/tabulated-list.el (tabulated-list-init-header):
	Don't skip aligning the next header field when padding is 0;
	otherwise, field width is not respected unless the title is as
	wide as the field.

2013-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-el-version): Remove.
	(package-process-define-package): Fix inf-loop.
	(package-install): Allow symbols as arguments again.

2013-06-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Move `catch',
	add some more keyword-like methods.
	http://lists.gnu.org/archive/html/emacs-devel/2013-06/msg00911.html

2013-06-22  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-buffer-show-mark): Make defvar-local.
	(bs-mode): Use setq-local.

	* emacs-lock.el (emacs-lock-mode, emacs-lock--old-mode)
	(emacs-lock--try-unlocking): Make defvar-local.

2013-06-22  Glenn Morris  <rgm@fencepost.gnu.org>

	* play/cookie1.el (cookie-apropos): Minor simplification.
